--- a/salad.css
+++ b/salad.css
@@ -1,21 +1,18 @@
 #salad {
   color: green;
-  background-color: black;
   font-size: 36px;
-  display: inline-block;
   margin: 0 auto;
 }
 
 p {
   background-color: yellow;
   font-size: 24px;
-  display: inline-block;
+  display: inline;
 }
 
 ol,
 ul {
   font-size: 24px;
-  display: inline-block;
 }
 
 body {
@@ -23,6 +20,11 @@ body {
 }
 
 h1 {
-  display: inline-block;
+  display: block;
+  margin: 0 auto;
+}
+
+h2 {
+  display: block;
   margin: 0 auto;
 }
